ОписаниÐЕуьзщЕTemp git commit -m ОписанÐTemp git status git commit -m ОписаниÐЕуьзщЕTemp